--- a/.github/workflows/extract.yml
+++ b/.github/workflows/extract.yml
@@ -6,7 +6,7 @@ permissions:
 
 jobs:
   extract:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
       - name: 设置 Python 3.10
