--- a/.github/workflows/extract.yml
+++ b/.github/workflows/extract.yml
@@ -21,6 +21,8 @@ jobs:
           path: zed
       - name: 提取
         run: python3 extract.py
+      - name: 删除多余词条
+        run: python3 delete.py
       - name: 上传词条文件
         uses: actions/upload-artifact@v4
         with:
