--- a/del.yaml
+++ b/del.yaml
@@ -9,6 +9,7 @@ global: # 全局规则，对所有文件生效
   - "arrow-circle"
   - "test-support"
   - "{}"
+  - "rs"
 "zed/crates/activity_indicator/src/activity_indicator.rs":
   - " ({}%)"
   - "arrow-circle"
@@ -86,6 +87,18 @@ global: # 全局规则，对所有文件生效
 "zed/crates/assistant/src/prompt_library.rs":
   - "prompt-list"
   - "new-prompt"
+"zed/crates/assistant/src/prompts.rs":
+  - "prompts"
+  - "Markdown"
+  - "text"
+  - "code"
+  - "<insert_here></insert_here>"
+  - "<rewrite_this>\n"
+  - "\n</rewrite_this>"
+  - "content_prompt"
+  - "terminal_assistant_prompt"
+  - "suggest_edits"
+  - "project_slash_command"
 "zed/crates/copilot/src/copilot_chat.rs":
   - "Authorization"
   - "Content-Type"
@@ -99,6 +112,37 @@ global: # 全局规则，对所有文件生效
   - "-c"
   - "ZED_FAKE_TEST_ENV"
   - "ZED_SHELL_START"
+"zed/crates/semantic_index/src/chunking.rs":
+  - "lib.rs"
+  - "Self {"
+  - "struct Person {"
+  - "impl Person {"
+  - "    fn last_name"
+  - "struct T"
+  - "struct V"
+  - "struct W"
+  - "}"
+  - "struct S {"
+  - "struct U"
+  - "4, h: u64, i: u64"
+"zed/crates/semantic_index/src/project_index_debug_view.rs":
+  - "ProjectIndexDebugView"
+"zed/crates/semantic_index/src/semantic_index.rs":
+  - "fixture"
+  - "main.rs"
+  - "needle.md"
+  - "fixture/needle.md"
+  - "abcdefghijklmnop"
+  - "qrstuvwxyz"
+  - "qrst"
+  - "uvwx"
+  - "yz"
+  - "four"
+  - "fake_project/file1.txt"
+  - "one\ntwo\nthree\n"
+  - "two"
+  - "two\nthree\nfour\n"
+  - "fake_project/file2.txt"
 "zed/crates/time_format/src/time_format.rs":
   - "2021-12-31 3:00AM"
   - "Today at x"
