--- a/del.yaml
+++ b/del.yaml
@@ -8,8 +8,12 @@ global: # 全局规则，对所有文件生效
   - ""
   - "arrow-circle"
   - "test-support"
+  - "snake_case"
+  - "Markdown"
   - "{}"
   - "rs"
+  - "\n"
+  - "\\n"
 "zed/crates/activity_indicator/src/activity_indicator.rs":
   - " ({}%)"
   - "arrow-circle"
@@ -57,7 +61,6 @@ global: # 全局规则，对所有文件生效
   - "text_delta"
   - "input_json_delta"
   - "{0}"
-  - "snake_case"
   - "rate_limit_error"
   - "anthropic-ratelimit-tokens-limit"
   - "anthropic-ratelimit-requests-limit"
@@ -84,6 +87,12 @@ global: # 全局规则，对所有文件生效
   - "```"
   - "\\n"
   - "/{} {}"
+"zed/crates/assistant/src/context.rs":
+  - "…"
+  - "\n{PENDING_OUTPUT_END_MARKER}"
+  - "\n"
+  - "\\n{PENDING_OUTPUT_END_MARKER}"
+  - "\\n"
 "zed/crates/assistant/src/prompt_library.rs":
   - "prompt-list"
   - "new-prompt"
@@ -99,10 +108,575 @@ global: # 全局规则，对所有文件生效
   - "terminal_assistant_prompt"
   - "suggest_edits"
   - "project_slash_command"
+"zed/crates/assistant2/src/streaming_diff.rs":
+  - "{:5}"
+  - "aaaa\nbbbb"
+  - "\ncccc"
+  - "aaaa\nbbbb\ncccc"
+  - "BBBB"
+  - "aaaa\nbbbb\ncccc\ndddd"
+  - "A"
+  - "\nEEEE"
+  - "aaaabbbb"
+  - "\n"
+  - "\n\n"
+  - "aaaa\n\n\nbbbb"
+  - "line1\nline2\nline3\nline4"
+  - "inserted\n"
+  - "\nnewline"
+  - "line1\ninserted\nline3\nnewline\nline4"
+  - "        for y in 0..size.y() {\n"
+  - "            let a = 10;\n"
+  - "            let b = 20;\n"
+  - "        }"
+  - "let"
+  - " mut"
+  - " y"
+  - " ="
+  - " 0"
+  - ";"
+  - "        while"
+  - " < size"
+  - "."
+  - "y"
+  - "()"
+  - " {"
+  - "    y"
+  - " +="
+  - " 1"
+  - "        "
+  - "OLD_TEXT_LEN"
 "zed/crates/copilot/src/copilot_chat.rs":
   - "Authorization"
   - "Content-Type"
   - "Bearer {}"
+"zed/crates/editor/src/display_map.rs":
+  - "one two three four five\nsix seven eight"
+  - "one two \nthree four \nfive\nsix seven \neight"
+  - "seven"
+  - "and "
+  - "three four \nfive\nsix and \nseven eight"
+  - "three \nfour five\nsix and \nseven \neight"
+  - "\\t"
+  - "    b   bbbbb"
+  - "c   ccccc"
+  - "mod.body"
+  - "fn.name"
+  - "Test"
+  - ".test"
+  - "fn "
+  - "outer"
+  - "() {}\n\nmod module "
+  - "{\n    fn "
+  - "inner"
+  - "() {}\n}"
+  - "    fn "
+  - "out"
+  - "⋯"
+  - "  fn "
+  - "four"
+  - "string"
+  - "punctuation"
+  - "keyword"
+  - "const"
+  - ":"
+  - ";"
+  - "Courier"
+  - " A"
+  - " &str = "
+  - "\\"
+  - "    two\n    three\n\\"
+  - " B"
+  - "hi"
+  - "struct A {\n    b: usize;\n"
+  - "}"
+  - "\nconst c: "
+  - "usize"
+  - " = "
+  - "1"
+  - ";\n"
+  - "abcde\nfghij\nklmno\npqrst"
+  - "abcde\n\n\n\n\npqrst"
+  - "point_to_display_point({:?}, Bias::Left)"
+  - "point_to_display_point({:?}, Bias::Right)"
+  - "display_point_to_point({:?}, Bias::Left)"
+  - "display_point_to_point({:?}, Bias::Right)"
+  - "fn \n"
+  - "oute\nr"
+  - "() \n{}\n\n"
+  - "{}\n\n"
+  - "⋯\n"
+  - "  \nfn "
+  - "i\n"
+  - "operator"
+  - "constˇ «a»: B = "
+  - "const "
+  - "a"
+  - " B = "
+  - "d"
+  - "ˇˇα"
+  - "ˇαˇ"
+  - "ˇˇ✋"
+  - "ˇ✋ˇ"
+  - "ˇˇ🍐"
+  - "ˇ🍐ˇ"
+  - "ˇˇ\\t"
+  - "ˇ\\tˇ"
+  - " ˇˇ\\t"
+  - " ˇ\\tˇ"
+  - "   ˇˇ\\t"
+  - "ˇˇ"
+  - "ˇaˇ"
+  - "aˇbˇ"
+  - "aˇαˇ"
+  - "aaa\nbbb\nccc\nddd\neee\nfff\nggg\nhhh\niii\njjj\nkkk\nlll"
+  - "✅\\t\\tα\nβ\\t\n🏀β\\t\\tγ"
+  - "✅       α\nβ   \n🏀β      γ"
+  - "β   \n🏀β      γ"
+  - "🏀β      γ"
+  - "✅\\t\\t"
+  - "✅       "
+  - "β\\t"
+  - "β   "
+  - "🏀β\\t\\t"
+  - "🏀β      "
+  - "✅      "
+  - "✅\\t"
+  - "✅ "
+  - "✅"
+  - "aaa\n\\t\\tbbb"
+"zed/crates/editor/src/editor_tests.rs":
+  - "123456"
+  - "editor1"
+  - "edited"
+  - "editor2"
+  - "X"
+  - "cd"
+  - "12cd56"
+  - "e"
+  - "12cde6"
+  - "a"
+  - "b"
+  - "ab2cde6"
+  - "abcde"
+  - "à"
+  - "á"
+  - "ä"
+  - "äbcde"
+  - "ā"
+  - "ābcde"
+  - "è"
+  - "ābcdè"
+  - "ę"
+  - "ābcdę"
+  - "XYZ"
+  - "XYZbXYZdXYZ"
+  - "1"
+  - "X1ZbX1ZdX1Z"
+  - "2"
+  - "X2ZbX2ZdX2Z"
+  - "aaaaaa\nbbbbbb\ncccccc\nddddddd\n"
+  - "aaaaaa\nbbbbbb\ncccccc\ndddddd\n"
+  - "\\t"
+  - "ⓐⓑⓒⓓⓔ\nabcde\nαβγδε"
+  - "ⓐⓑ⋯ⓔ\nab⋯e\nαβ⋯ε"
+  - "ⓐ"
+  - "ⓐⓑ"
+  - "ⓐⓑ⋯"
+  - "ab⋯e"
+  - "ab⋯"
+  - "ab"
+  - "α"
+  - "αβ"
+  - "αβ⋯"
+  - "αβ⋯ε"
+  - "ⓐⓑⓒⓓⓔ\nabcd\nαβγ\nabcd\nⓐⓑⓒⓓⓔ\n"
+  - "ⓐⓑⓒⓓⓔ"
+  - "abcd"
+  - "αβγ"
+  - "abc\n  def"
+  - "ab\n  de"
+  - "thequickbrownfox\njumpedoverthelazydogs"
+  - "thequickbrownfox\njumpedoverthelaz\nydogs"
+  - "use std::str::{foo, bar}\n\n  {baz.qux()}"
+  - "use std::ˇstr::{foo, bar}\n\n  {ˇbaz.qux()}"
+  - "use stdˇ::str::{foo, bar}\n\n  ˇ{baz.qux()}"
+  - "use ˇstd::str::{foo, bar}\n\nˇ  {baz.qux()}"
+  - "ˇuse std::str::{foo, bar}\nˇ\n  {baz.qux()}"
+  - "ˇuse std::str::{foo, barˇ}\n\n  {baz.qux()}"
+  - "useˇ std::str::{foo, bar}ˇ\n\n  {baz.qux()}"
+  - "use stdˇ::str::{foo, bar}\nˇ\n  {baz.qux()}"
+  - "use std::«ˇs»tr::{foo, bar}\n\n  {«ˇb»az.qux()}"
+  - "use std«ˇ::s»tr::{foo, bar}\n\n  «ˇ{b»az.qux()}"
+  - "use one::{\n    two::three::four::five\n};"
+  - "use one::{\n    two::three::\n    four::five\n};"
+  - "one «two threeˇ» four"
+  - " four"
+  - "one two three four"
+  - "e two te four"
+  - "e t te our"
+  - "one\n2\nthree\n4"
+  - "one\n2\nthree\n"
+  - "one\n2\nthree"
+  - "one\n2\n"
+  - "one\n2"
+  - "one\n"
+  - "\none\n   two\nthree\n   four"
+  - "one\n   two\nthree\n   four"
+  - "\n   two\nthree\n   four"
+  - "two\nthree\n   four"
+  - "\nthree\n   four"
+  - "\n   four"
+  - "aaaa\n    bbbb\n"
+  - "aa\naa\n  \n    bb\n    bb\n"
+  - "(_ "
+  - " "
+  - " @end) @indent"
+  - "//"
+  - "a( X ), b( Y ), c( Z )"
+  - "a(), b(), c()"
+  - "Z"
+  - "a(Z), b(Z), c(Z)"
+  - "TOML"
+  - "a = 1\nb = 2\n"
+  - "const c: usize = 3;\n"
+  - "ˇthe lazy dogˇ"
+  - "abc\ndef\nghi\n"
+  - "ghi"
+  - "ghi\n"
+  - "aaa\nbbb\nccc\nddd\n\n"
+  - "aaa bbb\nccc\nddd\n\n"
+  - "aaa bbb ccc ddd\n\n"
+  - "aaa bbb\nccc\nddd\n"
+  - "aaa bbb\nccc\nddd"
+  - "  "
+  - "  \n\\td"
+  - "aaa bbb\n  c\n  \n\\td"
+  - "aaa bbb c\n  \n\\td"
+  - "aaa bbb c\n\\td"
+  - "aaa bbb c d"
+  - "aaa bbb ccc\nddd\n"
+  - "Line 0\\r\nLine 1\\rˇ\nLine 2\\r\nLine 3"
+  - "Line 0\\r\nLine 1\\r\nLine 2\\r\nLine 3"
+  - "added_line"
+  - "abc\nabc\ndef\ndef\nghi\n\n"
+  - "abc\ndef\nghi\nabc\ndef\nghi\n"
+  - "abc\ndbc\ndef\ngf\nghi\n"
+  - "aa⋯bbb\nccc⋯eeee\nfffff\nggggg\n⋯i\njjjjj"
+  - "aa⋯bbb\nccc⋯eeee\nggggg\n⋯i\njjjjj\nfffff"
+  - "ccc⋯eeee\naa⋯bbb\nfffff\nggggg\n⋯i\njjjjj"
+  - "ccc⋯eeee\nfffff\naa⋯bbb\nggggg\n⋯i\njjjjj"
+  - "ccc⋯eeee\naa⋯bbb\nggggg\n⋯i\njjjjj\nfffff"
+  - "abc"
+  - "bac"
+  - "bca"
+  - "abc\nde"
+  - "acb\nde"
+  - "acbd\ne"
+  - "acbde\n"
+  - "bacd\ne"
+  - "bcade\n"
+  - "bcda\ne"
+  - "bcaed\n"
+  - "🍐🏀✋"
+  - "🏀🍐✋"
+  - "🏀✋🍐"
+  - "// "
+  - "# "
+  - "/// "
+  - "Plain Text"
+  - "«one✅ ˇ»two «three ˇ»four «five ˇ»six "
+  - "ˇtwo ˇfour ˇsix "
+  - "two ˇfour ˇsix ˇ"
+  - "two one✅ ˇfour three ˇsix five ˇ"
+  - "ˇtwo one✅ four three six five ˇ"
+  - "( "
+  - ") "
+  - "( one✅ "
+  - "three "
+  - "five ) ˇtwo one✅ four three six five ( one✅ "
+  - "five ) ˇ"
+  - "fox jumps over\n"
+  - "abc\nde\nfgh"
+  - "aa⋯bbb\nccc⋯eeee\nfffff\nggggg\n⋯i"
+  - "aaaaa\nbbbbb\nccc⋯eeee\nfffff\nggggg\n⋯i"
+  - "aaaaa\nbbbbb\nccccc\nddddd\neeeee\nfffff\nggggg\nhhhhh\niiiii"
+  - "abc\ndefghi\n\njk\nlmno\n"
+  - "abc\nˇabc abc\ndefabc\nabc"
+  - "abc\n«abcˇ» abc\ndefabc\nabc"
+  - "abc\n«abcˇ» «abcˇ»\ndefabc\nabc"
+  - "abc\n«abcˇ» «abcˇ»\ndefabc\n«abcˇ»"
+  - "«abcˇ»\n«abcˇ» «abcˇ»\ndefabc\n«abcˇ»"
+  - "aaa\n«bbb\nccc\n»ddd"
+  - "«abcˇ»\n«abcˇ» abc\ndefabc\nabc"
+  - "«abcˇ»\n«abcˇ» abc\ndefabc\n«abcˇ»"
+  - "«abcˇ»\n«abcˇ» abc\ndef«abcˇ»\n«abcˇ»"
+  - "«abcˇ»\n«abcˇ» «abcˇ»\ndef«abcˇ»\n«abcˇ»"
+  - "abc\n«ˇabc» abc\ndefabc\nabc"
+  - "«abcˇ»\n«ˇabc» abc\ndefabc\nabc"
+  - "«abcˇ»\n«ˇabc» abc\ndefabc\n«abcˇ»"
+  - "«abcˇ»\n«ˇabc» abc\ndef«abcˇ»\n«abcˇ»"
+  - "«abcˇ»\n«ˇabc» «abcˇ»\ndef«abcˇ»\n«abcˇ»"
+  - "text"
+  - "«textˇ»"
+  - "te«ˇ»xt"
+  - "{"
+  - "}"
+  - "("
+  - ")"
+  - "fn a() {}"
+  - "fn a(\n    \n) {\n    \n}\n"
+  - "/*"
+  - " */"
+  - "["
+  - "]"
+  - "\\"
+  - "<"
+  - ">"
+  - "})]"
+  - "/"
+  - "*"
+  - "autoclose_before"
+  - "ˇa b"
+  - "{ˇa b"
+  - "ˇ"
+  - "[ˇ"
+  - "«aˇ» b"
+  - "{«aˇ»} b"
+  - "aˇ"
+  - "a\\"
+  - "<ˇ"
+  - "<«aˇ»> b"
+  - "HTML"
+  - "})]>"
+  - "javascript"
+  - "JavaScript"
+  - " b="
+  - "c"
+  - "d"
+  - "start"
+  - "end"
+  - "close"
+  - "newline"
+  - ", "
+  - ": "
+  - "not_in"
+  - "string"
+  - "(string_literal) @string"
+  - "\\\\"
+  - "/* "
+  - "*/"
+  - "_"
+  - "Hello "
+  - ":wave"
+  - "Hello :wave"
+  - ":"
+  - "Hello 👋"
+  - " :smile"
+  - "Hello 👋 :smile"
+  - "Hello 👋 😄"
+  - "Hello 👋 😄:wave"
+  - "Hello 👋 😄👋"
+  - ":1"
+  - "Hello 👋 😄👋:1"
+  - "Hello 👋 😄👋:1:"
+  - " Test:wave"
+  - "Hello 👋 😄👋:1: Test:wave"
+  - "Hello 👋 😄👋:1: Test:wave:"
+  - " :wave"
+  - "Hello 👋 😄👋:1: Test:wave: :wave"
+  - "Hello 👋 😄👋:1: Test:wave: :wave:"
+  - "type ${1|,i32,u32|} = $2"
+  - "f(${1:one}, ${2:two}, ${1:three})$0"
+  - "/file.rs"
+  - "one\ntwo\nthree\n"
+  - "one, two\nthree\n"
+  - "somehting_new\n"
+  - "aaaa\nbbbb\ncccc\ndddd\neeee\nffff\ngggg\nhhhh\niiii\njjjj"
+  - "llll\nmmmm\nnnnn\noooo\npppp\nqqqq\nrrrr\nssss\ntttt\nuuuu"
+  - "vvvv\nwwww\nxxxx\nyyyy\nzzzz\n{{{{\n||||\n}}}}\n~~~~\n\\u{7f}\\u{7f}\\u{7f}\\u{7f}"
+  - "/a"
+  - "main.rs"
+  - "other.rs"
+  - "lib.rs"
+  - "|one|two|three|"
+  - "|four|five|six|"
+  - "a|one|two|three|aa\nbbbb\ncccc\n\nffff\ngggg\n\njjjj\nllll\nmmmm\nnnnn|four|five|six|\nr\n\nuuuu\nvvvv\nwwww\nxxxx\n\n{{{{\n||||\n\n\\u{7f}\\u{7f}\\u{7f}\\u{7f}"
+  - "a|one|two|three|aa\nbbbb\ncccc\ndddd\neeee\nffff\ngggg\nhhhh\niiii\njjjj"
+  - "llll\nmmmm\nnnnn|four|five|six|oooo\npppp\nr\nssss\ntttt\nuuuu"
+  - "[{} formatted]"
+  - "a|o[file:///a/main.rs formatted]bbbb\ncccc\n\nffff\ngggg\n\njjjj\n\nlll[file:///a/other.rs formatted]mmmm\nnnnn|four|five|six|\nr\n\nuuuu\n\nvvvv\nwwww\nxxxx\n\n{{{{\n||||\n\n\\u{7f}\\u{7f}\\u{7f}\\u{7f}"
+  - "a|o[file:///a/main.rs formatted]bbbb\ncccc\ndddd\neeee\nffff\ngggg\nhhhh\niiii\njjjj\n"
+  - "lll[file:///a/other.rs formatted]mmmm\nnnnn|four|five|six|oooo\npppp\nr\nssss\ntttt\nuuuu\n"
+  - "\n    "
+  - "one "
+  - "twoˇ"
+  - "four"
+  - "one"
+  - "three"
+  - "fn sample(param1: u8, param2: u8)"
+  - "param1: u8"
+  - "param2: u8"
+  - "param1: u8, param2: u8"
+  - "."
+  - "first_completion"
+  - "second_completion"
+  - "foo: u8"
+  - "\nadditional edit"
+  - "s"
+  - "fourth_completion"
+  - "fifth_completion"
+  - "sixth_completion"
+  - "i"
+  - "editorˇ"
+  - "l"
+  - "o"
+  - "editor.cloˇ"
+  - "editor.<clo|>"
+  - "clobber"
+  - "editor.closeˇ"
+  - "first"
+  - "last"
+  - "Range"
+  - "r"
+  - "ret"
+  - "return"
+  - "slice"
+  - "rˇ"
+  - "fn main() { let a = 2ˇ; }"
+  - "Some"
+  - "```rust\nSome(2)\n```"
+  - "Some(2)"
+  - "fn main() { let a = 2.ˇ; }"
+  - "S"
+  - "m"
+  - "fn main() { let a = 2.Somˇ; }"
+  - "//! "
+  - "<!-- "
+  - " -->"
+  - "aaaa\nbbbb"
+  - "Xaaaa\nXbbbb"
+  - "Xa\nbbb"
+  - "X\nbb"
+  - "aaaa\nbbbb\nbbbb\ncccc"
+  - "{   }\n"
+  - "  x\n"
+  - "  /*   */\n"
+  - "x\n"
+  - "{{} }\n"
+  - "{ \n"
+  - "}\n"
+  - "  /* \n"
+  - "  \n"
+  - "  */\n"
+  - "{{} \n"
+  - "abc\ndef\nghi\njkl\n"
+  - "mno\npqr\nstu\nvwx\n"
+  - "/root/file"
+  - "hello"
+  - "world"
+  - "hello there"
+  - "around the"
+  - "HelloWorld"
+  - "Hello"
+  - "World"
+  - "hello_world"
+  - "hello_"
+  - "_hello_world_"
+  - "world_"
+  - "Hello_World"
+  - "Hello_"
+  - "helloWOrld"
+  - "WOrld"
+  - "helloworld"
+  - ":do_the_thing"
+  - "do_"
+  - "the_"
+  - "thing"
+  - "console.logˇ(var);"
+  - "console.log(var)ˇ;"
+  - "console.log(ˇvar);"
+  - "console.log(varˇ);"
+  - "console.log('foo', [1, 2, 3]ˇ);"
+  - "console.log(ˇ'foo', [1, 2, 3]);"
+  - "let result = curried_fun()ˇ();"
+  - "let result = curried_fun()()ˇ;"
+  - "fn main() { let a = 5; }"
+  - "// Test file"
+  - "/a/main.rs"
+  - "fn main() { let a = {5}; }"
+  - "some"
+  - "fffffff2"
+  - "fn main() { let a = 2.Some(2)ˇ; }"
+  - "fn main() { let a = Some(2)ˇ; }"
+  - "id"
+  - ".id"
+  - "other"
+  - ".other"
+  - "!!"
+  - "??"
+  - "fn main() { let a = ??.other; }"
+  - "abs"
+  - "very"
+  - "special"
+  - "item_{}"
+  - "?"
+  - "default"
+  - "data"
+  - "jsx"
+  - "element"
+  - "(jsx_self_closing_element) @element"
+  - "bg-blue"
+  - "bg-red"
+  - "bg-yellow"
+  - "<p class="
+  - " />"
+  - "-"
+  - "/file.ts"
+  - "TypeScript"
+  - "ts"
+  - "test_plugin"
+  - "Xaaa\nXbbb\nXccc\n\nXfff\nXggg\n\nXjjj\nXlll\nXmmm\nXnnn\n\nXqqq\nXrrr\n\nXuuu\nXvvv\nXwww\nXxxx\n\nX{{{\nX|||\n\nX\\u{7f}\\u{7f}\\u{7f}"
+  - "aaaa\nbbbb\ncccc\ndddd\neeee\nffff\ngggg\nhhhh\niiii\njjjj\n\n\nllll\nmmmm\nnnnn\noooo\npppp\nqqqq\nrrrr\nssss\ntttt\nuuuu\n\n\nvvvv\nwwww\nxxxx\nyyyy\nzzzz\n{{{{\n||||\n}}}}\n~~~~\n\\u{7f}\\u{7f}\\u{7f}\\u{7f}\n\n"
+  - "aaaa\nbbbb\ncccc\ndddd\neeee\nffff\ngggg\nhhhh\niiii\njjjj\n\n\nXlll\nXmmm\nXnnn\n\nXqqq\nXrrr\n\nXuuu\nXvvv\nXwww\nXxxx\n\nX{{{\nX|||\n\nX\\u{7f}\\u{7f}\\u{7f}"
+  - "Xlll\nXmmm\nXnnn\nXooo\nXppp\nXqqq\nXrrr\nXsss\nXttt\nXuuu"
+  - "Xvvv\nXwww\nXxxx\nXyyy\nXzzz\nX{{{\nX|||\nX}}}\nX~~~\nX\\u{7f}\\u{7f}\\u{7f}"
+  - "X{}"
+  - "another"
+  - "another2"
+  - "aaa\nbbb\nccc\nddd\neee\nfff\nggg\nhhh\niii\njjj"
+  - "aaa\nccc\nddd\neee\nfff\nggg\nhhh\niii\njjj"
+  - "lll\nmmm\nnnn\nooo\nppp\nqqq\nrrr\nsss\nttt\nuuu"
+  - "lll\nmmm\nNNN\nooo\nppp\nqqq\nrrr\nsss\nttt\nuuu"
+  - "111\n222\n333\n444\n555\n777\n888\n999\n000\n!!!"
+  - "111\n222\n333\n444\n555\n666\n777\n888\n999\n000\n!!!"
+  - "aaa\nbbb\nccc\nddd\neee\nfff\nggg\n"
+  - "aaa\nBBB\nBB2\nccc\nDDD\nEEE\nfff\nggg\n"
+  - "const D: u32 = 42;\n"
+  - "const E: u32 = 42;\n"
+  - "replacement"
+  - "\nnew_line\n"
+  - "AAAA"
+  - "fn one() {\n    let mut a = two();\n}"
+  - "vvvv\nwwww\nxxxx\nyyyy\nzzzz\n1111\n2222\n3333\n4444\n5555"
+  - "first.rs"
+  - "second.rs"
+  - "third.rs"
+  - "\n\n\naaaa\nbbbb\ncccc\n\n\n\nffff\ngggg\n\n\n\njjjj\n\n\n\n\nllll\nmmmm\nnnnn\n\n\n\nqqqq\nrrrr\n\n\n\nuuuu\n\n\n\n\nvvvv\nwwww\nxxxx\n\n\n\n1111\n2222\n\n\n\n5555\n"
+  - "\n\n\n\n\nllll\nmmmm\nnnnn\n\n\n\nqqqq\nrrrr\n\n\n\nuuuu\n\n\n\n\nvvvv\nwwww\nxxxx\n\n\n\n1111\n2222\n\n\n\n5555\n"
+  - "\n\n\n\n\n\n\nvvvv\nwwww\nxxxx\n\n\n\n1111\n2222\n\n\n\n5555\n"
+  - "\n\n\n\n\n"
+  - "\n\n\n\n\nllll\nmmmm\nnnnn\n\n\n\nqqqq\nrrrr\n\n\n\nuuuu\n\n\n"
+  - "\n\n\naaaa\nbbbb\ncccc\n\n\n\nffff\ngggg\n\n\n\njjjj\n\n\n\n\nllll\nmmmm\nnnnn\n\n\n\nqqqq\nrrrr\n\n\n\nuuuu\n\n\n"
+  - "1111\n2222\n3333"
+  - "4444\n5555\n6666"
+  - "7777\n8888\n9999"
+  - "\n\n\n1111\n2222\n3333\n\n\n\n\n4444\n5555\n6666\n\n\n\n\n7777\n8888\n9999\n"
+  - "\n\n\n\n\n4444\n5555\n6666\n\n\n\n\n7777\n8888\n9999\n"
+  - "\n\n\n\n\n\n\n7777\n8888\n9999\n"
+  - "\n\n\n\n\n4444\n5555\n6666\n\n\n"
+  - "\n\n\n1111\n2222\n3333\n\n\n\n\n4444\n5555\n6666\n\n\n"
+  - "\n\n\n{sample_text}\n"
 "zed/crates/project/src/environment.rs":
   - "ZED_ENVIRONMENT"
   - "cli"
