--- a/del.yaml
+++ b/del.yaml
@@ -110,6 +110,57 @@ global: # 全局规则，对所有文件生效
   - "terminal_assistant_prompt"
   - "suggest_edits"
   - "project_slash_command"
+"zed/crates/assistant/src/terminal_inline_assistant.rs":
+  - "\\x15"
+  - "\\x0d"
+"zed/crates/assistant/src/slash_command/diagnostics_command.rs":
+  - "{}{}"
+  - "--include-warnings"
+  - "{file_path}"
+  - " ({})"
+  - ","
+  - "```"
+  - "//"
+  - " {}: "
+  - "\\n//{:padding$}"
+  - "{message}"
+"zed/crates/assistant/src/streaming_diff.rs":
+  - "{:5}"
+  - "aaaa\\nbbbb"
+  - "\\ncccc"
+  - "aaaa\\nbbbb\\ncccc"
+  - "BBBB"
+  - "aaaa\\nbbbb\\ncccc\\ndddd"
+  - "A"
+  - "\\nEEEE"
+  - "aaaabbbb"
+  - "\\n\\n"
+  - "aaaa\\n\\n\\nbbbb"
+  - "line1\\nline2\\nline3\\nline4"
+  - "inserted\\n"
+  - "\\nnewline"
+  - "line1\\ninserted\\nline3\\nnewline\\nline4"
+  - "        for y in 0..size.y() {\\n"
+  - "            let a = 10;\\n"
+  - "            let b = 20;\\n"
+  - "        }"
+  - "let"
+  - " mut"
+  - " y"
+  - " ="
+  - " 0"
+  - ";"
+  - "        while"
+  - " < size"
+  - "."
+  - "y"
+  - "()"
+  - " {"
+  - "    y"
+  - " +="
+  - " 1"
+  - "        "
+  - "OLD_TEXT_LEN"
 "zed/crates/assistant2/src/streaming_diff.rs":
   - "{:5}"
   - "aaaa\nbbbb"
@@ -719,6 +770,33 @@ global: # 全局规则，对所有文件生效
   - "two"
   - "two\nthree\nfour\n"
   - "fake_project/file2.txt"
+"zed/crates/terminal_view/src/terminal_panel.rs":
+  - "TerminalPanel"
+  - "terminal-tab-bar-popover-menu"
+  - "\\"
+  - "{shell} -i -c '{}'"
+  - "{shell} -C '{}'"
+  - "{shell} /C '{}'"
+  - "-i"
+  - "-c"
+  - "-C"
+  - "/C"
+  - " {path:?}"
+  - "terminal_inline_assistant"
+  - "SHELL"
+  - "powershell"
+  - "powershell.exe"
+  - "pwsh"
+  - "pwsh.exe"
+  - "cmd"
+  - "cmd.exe"
+  - "${"
+  - "}"
+  - "%{}%"
+  - "$"
+  - "$env:"
+  - "$env:{}"
+  - "toggle_zoom"
 "zed/crates/time_format/src/time_format.rs":
   - "2021-12-31 3:00AM"
   - "Today at x"
