--- a/del.yaml
+++ b/del.yaml
@@ -16,6 +16,7 @@ global: # 全局规则，对所有文件生效
   - "\\n"
   - "/"
   - "Jupyter"
+  - "Zed"
 "zed/crates/activity_indicator/src/activity_indicator.rs":
   - " ({}%)"
   - "arrow-circle"
@@ -740,6 +741,23 @@ global: # 全局规则，对所有文件生效
   - "\n\n\n\n\n4444\n5555\n6666\n\n\n"
   - "\n\n\n1111\n2222\n3333\n\n\n\n\n4444\n5555\n6666\n\n\n"
   - "\n\n\n{sample_text}\n"
+"zed/crates/language_models/src/provider/cloud.rs":
+  - "terms_of_service"
+  - "ZED_CLOUD_PROVIDER_ADDITIONAL_MODELS_JSON"
+  - "lowercase"
+  - "https://zed.dev/terms-of-service"
+  - "accept_terms"
+  - "/completion"
+  - "Content-Type"
+  - "application/json"
+  - "Authorization"
+  - "Bearer {token}"
+  - "zed.dev/{}"
+  - "https://zed.dev/ai"
+  - "manage_settings"
+  - "learn_more"
+  - "upgrade"
+  - "sign_in"
 "zed/crates/project/src/environment.rs":
   - "ZED_ENVIRONMENT"
   - "cli"
