--- a/del.yaml
+++ b/del.yaml
@@ -758,6 +758,20 @@ global: # 全局规则，对所有文件生效
   - "learn_more"
   - "upgrade"
   - "sign_in"
+"zed/crates/language_models/src/provider/lmstudio.rs":
+  - "https://lmstudio.ai/models"
+  - "https://lmstudio.ai/"
+  - "https://lmstudio.ai/download"
+  - "lmstudio"
+  - "LM Studio"
+  - "authenticated"
+  - "lmstudio/{}"
+  - "lms get qwen2.5-coder-7b"
+  - "lmstudio-site"
+  - "download_lmstudio_button"
+  - "view-models"
+  - "connected"
+  - "retry_lmstudio_models"
 "zed/crates/project/src/environment.rs":
   - "ZED_ENVIRONMENT"
   - "cli"
