--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -11,6 +11,7 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "3.10"
+      - uses: actions/checkout@v4
       - name: 手动同步 zed 源代码
         uses: actions/checkout@v4
         with:
