--- a/whitelist.yaml
+++ b/whitelist.yaml
@@ -173,3 +173,29 @@
   - "expected edit completion"
   - "expected move completion"
   - "Fake Completion Provider"
+"zed/crates/editor/src/display_map.rs":
+  - "we expect the font to be loaded because it's rendered by the editor"
+  - "DisplayPoint({}, {})"
+  - "OPERATIONS"
+  - "invalid `OPERATIONS` variable"
+  - "tab size: {}"
+  - "wrap width: {:?}"
+  - "buffer text: {:?}"
+  - "fold text: {:?}"
+  - "tab text: {:?}"
+  - "wrap text: {:?}"
+  - "block text: {:?}"
+  - "display text: {:?}"
+  - "setting wrap width to {:?}"
+  - "setting tab size to {:?}"
+  - "inserting block {:?} with height {}"
+  - "removing block ids {:?}"
+  - "unfolding ranges: {:?}"
+  - "folding ranges: {:?}"
+  - "row boundary before {:?}. reported buffer row boundary: {:?}"
+  - "display row boundary after {:?}. reported buffer row boundary: {:?}"
+  - "row boundary before {:?}. reported display row boundary: {:?}"
+  - "row boundary after {:?}. reported display row boundary: {:?}"
+  - "Moving from point {:?}"
+  - "Right {:?}"
+  - "Left {:?}"
