--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,9 +16,6 @@ jobs:
           - backend: vulkan
             artifact_name: zed-release
             rustflags: ""
-          - backend: opengl
-            artifact_name: zed-release-opengl
-            rustflags: "--cfg gles"
 
     steps:
       - name: Enable long paths in Git
@@ -84,11 +81,9 @@ jobs:
 
       - name: Create release directories and zip
         run: |
-          mkdir -p zed-release zed-release-opengl
+          mkdir -p zed-release
           mv artifacts/zed-release/zed.exe zed-release/
-          mv artifacts/zed-release-opengl/zed.exe zed-release-opengl/
           zip -r zed-windows.zip zed-release/*
-          zip -r zed-windows-opengl.zip zed-release-opengl/*
 
       - name: Upload release build artifacts to GitHub Release
         uses: softprops/action-gh-release@v2
@@ -99,4 +94,3 @@ jobs:
           make_latest: true
           files: |
             zed-windows.zip
-            zed-windows-opengl.zip
