--- a/.github/workflows/dpkg.yml
+++ b/.github/workflows/dpkg.yml
@@ -7,7 +7,7 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build-linux:
+  build-dpkg:
     runs-on: ubuntu-20.04
     steps:
       - name: 设置 Python 3.10
