--- a/.github/workflows/dpkg.yml
+++ b/.github/workflows/dpkg.yml
@@ -63,5 +63,5 @@ jobs:
       - name: 上传文件
         uses: actions/upload-artifact@v4
         with:
-          name: zed-linux-x86_64
+          name: zed-linux-x86_64.deb
           path: zed-linux-x86_64.deb
