--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       release:
-        type: bool
+        type: boolean
 
 env:
   CARGO_TERM_COLOR: always
