--- a/.github/workflows/extract.yml
+++ b/.github/workflows/extract.yml
@@ -1,6 +1,11 @@
 name: 词条提取
 on:
   workflow_dispatch:
+    inputs:
+      branch:
+        type: string
+        default: main
+        description: "分支名"
 permissions:
   contents: read
 
@@ -19,7 +24,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: zed-industries/zed
-          ref: main
+          ref: ${{ inputs.branch }}
           path: zed
       - name: 提取
         run: python3 extract.py
