linux编译脚本修改

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -7,7 +7,7 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build-linux:
+  build-linux: # 脚本来自 zed 官方仓库
     runs-on: ubuntu-20.04
     steps:
       - name: 设置 Python 3.10
@@ -36,12 +36,47 @@ jobs:
       - name: 创建 Linux .tar.gz 包
         run: cd zed && script/bundle-linux
 
-      - name: 找到匹配文件
-        id: find_files
-        run: echo "matches=$(find zed/target -name 'zed-*-linux-x86_64.tar.gz')" >> $GITHUB_ENV
+      - name: 移动文件
+        run: mv zed/target/release/zed-*-linux-x86_64.tar.gz zed-linux-x86_64.tar.gz
 
       - name: 上传文件
         uses: actions/upload-artifact@v4
         with:
           name: zed-linux-x86_64
-          path: ${{ env.matches }}
+          path: zed-linux-x86_64.tar.gz
+
+  bundle-linux-arm:
+    runs-on: ubuntu-20.04-arm64
+
+    steps:
+      - name: 设置 Python 3.10
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
+      - uses: actions/checkout@v4
+      - name: 手动同步 zed 源代码
+        uses: actions/checkout@v4
+        with:
+          repository: zed-industries/zed
+          ref: main
+          path: zed
+      - name: 替换
+        run: python3 replace.py
+
+      - name: 安装 Linux 依赖项
+        run: ./zed/script/linux
+
+      - name: 限制目标目录大小
+        run: zed/script/clear-target-dir-if-larger-than 100
+
+      - name: 创建 Linux .tar.gz 包
+        run: cd zed && script/bundle-linux
+
+      - name: 移动
+        run: mv zed/target/release/zed-*-linux-arm64.tar.gz zed-linux-arm64.tar.gz
+
+      - name: 上传文件
+        uses: actions/upload-artifact@v4
+        with:
+          name: zed-linux-arm64
+          path: zed-linux-arm64.tar.gz
