--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -46,7 +46,7 @@ jobs:
           path: zed-linux-x86_64.tar.gz
 
   bundle-linux-arm:
-    runs-on: ubuntu-20.04-arm64
+    runs-on: ubuntu-20.04-arm
 
     steps:
       - name: 设置 Python 3.10
