--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,29 +1,24 @@
-name: 替换并编译
+name: Windows 编译
 
 on:
+  schedule:
+    - cron: "0 0 * * *" # Runs every night at midnight UTC
   workflow_dispatch:
-    inputs:
-      release:
-        description: "是否发行"
-        type: boolean
-      branch:
-        type: string
-        default: main
-        description: "分支名"
-
-env:
-  CARGO_TERM_COLOR: always
+  pull_request:
 
 jobs:
-  build-windows:
+  build:
     runs-on: windows-latest
     strategy:
       matrix:
-        backend: [vulkan]
+        backend: [vulkan, opengl]
         include:
           - backend: vulkan
             artifact_name: zed-release
             rustflags: ""
+          - backend: opengl
+            artifact_name: zed-release-opengl
+            rustflags: "--cfg gles"
 
     steps:
       - name: Enable long paths in Git
@@ -35,19 +30,25 @@ jobs:
         run: |
           New-ItemProperty -Path "HKLM:\SYSTEM\CurrentControlSet\Control\FileSystem" `
             -Name "LongPathsEnabled" -Value 1 -PropertyType DWORD -Force
-      - uses: actions/checkout@v4
+
+      - name: Checkout self
+        uses: actions/checkout@v4
+
+      - name: Checkout Zed
+        uses: actions/checkout@v4
+        with:
+          repository: zed-industries/zed
+          ref: main
+          path: zed
+
       - name: 设置 Python 3.10
         uses: actions/setup-python@v3
         with:
           python-version: "3.10"
-      - name: 手动同步 zed 源代码
-        uses: actions/checkout@v4
-        with:
-          repository: zed-industries/zed
-          ref: ${{ inputs.branch }}
-          path: zed
+
       - name: 替换
         run: python3 replace.py
+
       - name: Install rust nightly
         uses: dtolnay/rust-toolchain@stable
         with:
@@ -65,8 +66,7 @@ jobs:
         run: pwsh ./Parse-Rustflags.ps1 ${{ matrix.rustflags }}
 
       - name: Build release
-        env:
-          RUSTFLAGS: ${{ matrix.rustflags }}
+        working-directory: zed
         run: cargo build --release
 
       - name: Archive build
@@ -76,9 +76,9 @@ jobs:
           path: zed/target/release/zed.exe
 
   release:
-    if: ${{ inputs.release }}
-    needs: build-windows
+    needs: build
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
     permissions:
       contents: write
 
@@ -94,9 +94,11 @@ jobs:
 
       - name: Create release directories and zip
         run: |
-          mkdir -p zed-release
+          mkdir -p zed-release zed-release-opengl
           mv artifacts/zed-release/zed.exe zed-release/
+          mv artifacts/zed-release-opengl/zed.exe zed-release-opengl/
           zip -r zed-windows.zip zed-release/*
+          zip -r zed-windows-opengl.zip zed-release-opengl/*
 
       - name: Upload release build artifacts to GitHub Release
         uses: softprops/action-gh-release@v2
@@ -107,3 +109,4 @@ jobs:
           make_latest: true
           files: |
             zed-windows.zip
+            zed-windows-opengl.zip
