--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,10 +1,10 @@
 name: Windows 编译
 
 on:
-  schedule:
-    - cron: "0 0 * * *" # Runs every night at midnight UTC
+  #schedule:
+  #  - cron: "0 0 * * *" # Runs every night at midnight UTC
   workflow_dispatch:
-  pull_request:
+  #pull_request:
 
 jobs:
   build:
