--- a/.github/workflows/dpkg.yml
+++ b/.github/workflows/dpkg.yml
@@ -65,3 +65,57 @@ jobs:
         with:
           name: zed-linux-x86_64.deb
           path: zed-linux-x86_64.deb
+
+  bundle-dpkg-arm:
+    runs-on: ubuntu-22.04-arm
+
+    steps:
+      - name: 设置 Python 3.10
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
+      - uses: actions/checkout@v4
+      - name: 手动同步 zed 源代码
+        uses: actions/checkout@v4
+        with:
+          repository: zed-industries/zed
+          ref: main
+          path: zed
+      - name: 替换
+        run: python3 replace.py
+
+      - name: 安装 Linux 依赖项
+        run: ./zed/script/linux
+
+      - name: 限制目标目录大小
+        run: zed/script/clear-target-dir-if-larger-than 100
+
+      - name: 创建 Linux .tar.gz 包
+        run: cd zed && script/bundle-linux
+
+      - name: 移动
+        run: mv zed/target/release/zed-*.tar.gz zed-linux-arm64.tar.gz
+
+      - name: 上传文件
+        uses: actions/upload-artifact@v4
+        with:
+          name: zed-linux-arm64
+          path: zed-linux-arm64.tar.gz
+
+      - name: 移动
+        run: mv zed-dev.app deb-arm/usr
+
+      - name: 权限修复
+        run: chmod 775 deb-arm -R
+
+      - name: 编译
+        run: dpkg-deb --build deb-arm
+
+      - name: 改名
+        run: mv deb-arm.deb zed-linux-arm64.deb
+
+      - name: 上传文件
+        uses: actions/upload-artifact@v4
+        with:
+          name: zed-linux-arm64.deb
+          path: zed-linux-arm64.deb
