--- a/.github/workflows/extract.yml
+++ b/.github/workflows/extract.yml
@@ -33,4 +33,5 @@ jobs:
       - name: 上传词条文件
         uses: actions/upload-artifact@v4
         with:
+          name: string
           path: string.json
