--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -44,6 +44,11 @@ jobs:
         with:
           name: zed-linux-x86_64
           path: zed-linux-x86_64.tar.gz
+      - name: 上传文件
+        uses: actions/upload-artifact@v4
+        with:
+          name: zed-remote-server-linux-x86_64
+          path: zed/target/zed-remote-server-linux-x86_64
 
   bundle-linux-arm:
     runs-on: ubuntu-22.04-arm
