--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -167,6 +167,9 @@ jobs:
       - name: 移动
         run: mv zed/target/release/zed*.tar.gz zed-linux-arm64.tar.gz
 
+      - name: 解压文件
+        run: tar -xvf zed-linux-arm64.tar.gz
+
       - name: 上传文件
         uses: actions/upload-artifact@v4
         with:
