--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,7 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "3.10"
+
       - name: 手动同步 zed 源代码
         uses: actions/checkout@v4
         with:
@@ -75,7 +76,7 @@ jobs:
 
       - name: 编译发行版
         working-directory: zed
-        run: cargo build --release
+        run: cargo build --release --jobs 4
 
       - name: Archive build
         uses: actions/upload-artifact@v4
