删除无用词条

--- a/del.yaml
+++ b/del.yaml
@@ -23,6 +23,7 @@ global: # 全局规则，对所有文件生效
   - "Zed"
   - "zed"
   - "⋯"
+  - "Bearer {}"
 "zed/crates/activity_indicator/src/activity_indicator.rs":
   - " ({}%)"
   - "arrow-circle"
