--- a/.github/workflows/auto-del.yaml
+++ b/.github/workflows/auto-del.yaml
@@ -23,6 +23,9 @@ jobs:
         with:
           python-version: "3.10"
 
+      - name: 安装依赖
+        run: pip install pyyaml
+
       - name: 自动删除
         run: python3 delete.py
 
